objects/ts2__Placement__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>ts2__Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenses_Entry_Method__c</fullName>
        <description>Are Expenses able to be claimed</description>
        <inlineHelpText>Indicates if an Expense is able to be claimed, and will be payable by the Client</inlineHelpText>
        <label>Expenses Entry Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Available</fullName>
                    <default>true</default>
                    <label>Not Available</label>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee</label>
        <referenceTo>tc9_p__Payee__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Use_2c9_Portal_Agreement_Logic__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked the Portal will use logic to validate whether a Payee can complete a timesheet depending on the 2c9 Portal Placement Agreement status being set to Complete</description>
        <inlineHelpText>Check this box if you wish to enforce the 2c9 Portal to validate whether this Payee can complete a timesheet depending on the Complete status of the Agreements listed on this Placement record.</inlineHelpText>
        <label>Use 2c9 Portal Agreement Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2c9_Portal_Placement_Agreement_Status__c</fullName>
        <description>The overall status of Agreements listed for this Placement is captured in this field. If no Agreements exist OR all Agreements are Complete then this status is Complete, else, status is Incomplete</description>
        <inlineHelpText>The overall status of Agreements listed for this Placement is captured in this field. If no Agreements exist OR all Agreements are Complete then this status is Complete, else, status is Incomplete</inlineHelpText>
        <label>2c9 Portal Placement Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                    <default>true</default>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2c9_Portal_Placement_Agreement_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If set to TRUE the Agreements listed on this Payee record will be visible on the 2c9 Portal for this Payee.</description>
        <inlineHelpText>If set to TRUE the Agreements listed on this Payee record will be visible on the 2c9 Portal for this Payee.</inlineHelpText>
        <label>2c9 Portal Placement Agreement Visible</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>